# motlie

./: .gitignore  .gitmodules  ADMIN.md  BENCH2-CODEX.md  CLAUDE.md  Cargo.toml  MIGRATION_PROGRESS.md  README.md  apidoc-prompt.txt  build.rs
bins/evals/: Cargo.toml  README.md
bins/evals/src/: accelerator.rs  artifacts.rs  cli.rs  coverage.rs  driver.rs  main.rs  metrics.rs  platform.rs  profile.rs  report.rs  result.rs  scenario.rs  snapshot.rs
bins/mbuild/: Cargo.toml  README.md
bins/mbuild/src/: main.rs
bins/mmux/: Cargo.toml  build.rs  cli.rs  consts.rs  controller.rs  detail.rs  forcecommand.rs  main.rs  model.rs  render.rs  target_host.rs  terminal.rs  tests.rs  text.rs
bins/mmux/docs/: API.md  CLI.md  DESIGN.md  PLAN.md  README.md
bins/mstream/: Cargo.toml  build.rs
bins/mstream/docs/: API.md  DESIGN-561-session-state-fidelity.md  DESIGN.md  PLAN.md
bins/mstream/src/: attach.rs  build_info.rs  cli.rs  client.rs  daemon.rs  jsonl.rs  main.rs  protocol.rs  skills.rs  state.rs  tags.rs  target.rs  timeline.rs
bins/telnyx-agent/: Cargo.toml
bins/telnyx-agent/src/: config.rs  gateway_client.rs  http.rs  main.rs  socket.rs  text_ws.rs  tmux_bridge.rs
bins/telnyx-gateway/: Cargo.toml  README.md  build.rs  gateway.toml
bins/telnyx-gateway/corpus/: asr-golden.json  qwen3-call-center-golden.json  qwen3-pm-orchestration-golden.json
bins/telnyx-gateway/docs/: API.md  ASR_ARTIFACT_AB.md  ASR_GOLDEN_AB.md  CONFIGS.md  DESIGN-541-modular-processor-pipeline.md  DESIGN-545-conversation-policy.md  DESIGN-557-staged-semantic-pipeline.md  DESIGN-586-aec-vad-boundary.md  DESIGN.md  INTERACTION_QUALITY.md  LIVE_RUN_CONFIG.example.toml  LIVE_RUN_INBOUND_IDENTITY.example.toml  LIVE_RUN_OUTBOUND_IDENTITY.example.toml  PLAN.md  PROFILING.md  RELEASE.md  TESTING.md  TTS_GOLDEN_AB.md
bins/telnyx-gateway/src/: adapter.rs  cli.rs  conversation.rs  conversation_policy.rs  early_response.rs  echo_match.rs  golden_ab.rs  lib.rs  logging.rs  main.rs  replay.rs  serve.rs  speech.rs  tts.rs
bins/tmux/driver/: Cargo.toml  README.md
bins/voice-agent/: Cargo.toml  README.md
bins/voice-agent/docs/: DESIGN.md  PLAN.md
bins/voice-agent/src/: main.rs
libs/agent/: Cargo.toml
libs/agent/docs/: DESIGN.md  PLAN.md
libs/agent/src/: channel.rs  lib.rs
libs/agent/tests/: channel_integration.rs
libs/core/: Cargo.toml  README.md  build.rs
libs/core/benches/: README.md  distance.rs
libs/core/src/: lib.rs  telemetry.rs
libs/db/: 2025-12-ENG-REVIEW.md  2025-12-FOLLOW-UP-ROADMAP.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.md  SUBSYSTEM.md
libs/db/benches/: db_operations.rs
libs/db/docs/: README.md  SHARDING.md  TODO.md  active-period-design.md  benchmark-plan.md  concurrency-and-storage-modes.md  edge-by-id-explained.md  edge-by-id-implementation-plan.md  edge-by-id-tuple-implementation.md  flush.md  getting-started.md  graph_algorithm_api_analysis.md  implementation-summary.md  msgpack-tuple-ordering-impact.md  mutation-api-guide.md  option2-implementation-outline.md  prefix-scanning-analysis-final.md  query-and-mutation-processor-simplification.md  query-api-guide.md  query-processor-simplification.md  reader-api-completeness-analysis.md  reader-api-gap-analysis.md  reader-claude.txt  reader.md  rocksdb-prefix-scan-bug-analysis.md  scan_interface.md  schema_design.md  shared-worker-pool.md  temporal-range-design.md  transaction.md  variable-length-fields-in-keys.md
libs/db/examples/: storage_builder_multi_subsystem.rs  unified_graph_fulltext.rs  vector_basic.rs
libs/db/src/: README.md  bm25.rs  bm25_tests.rs  fulltext.rs  fulltext_tests.rs  graph.rs  graph_tests.rs  index.rs  index_provider.rs  index_tests.rs  lib.rs  mutation.rs  provider.rs  query.rs  reader.rs  request.rs  rocks.rs  rocks_tests.rs  scan.rs  schema.rs  storage.rs  storage_builder.rs  subsystem.rs  writer.rs
libs/db/tests/: README.md  test_concurrent_readonly.rs  test_concurrent_secondary.rs  test_concurrent_shared.rs  test_fulltext_chaining.rs  test_fulltext_integration.rs  test_fulltext_search_pipeline.rs  test_pipeline_integration.rs  test_prefix_scan_bug.rs  test_prefix_scan_bug.rs.backup  test_secondary_api.rs  test_storage_builder.rs  test_transaction_api.rs  test_unified_query.rs  test_vector_baseline.rs  test_vector_benchmark_integration.rs  test_vector_cache_integration.rs  test_vector_channel.rs  test_vector_concurrent.rs  test_vector_delete.rs  test_vector_external_key.rs  test_vector_multi_embedding.rs  test_vector_snapshot_isolation.rs  test_vector_workflow_integration.rs  test_vector_writer_errors.rs  test_version_playback.rs
libs/driver/: Cargo.toml
libs/driver/docs/: API.md  DESIGN.md  DESIGN_MODELS_COMMANDS.md  LIFECYCLE.md  PLAN.md
libs/driver/examples/: tmux_repl.rs  tmux_tui.rs
libs/driver/src/: clap.rs  completion.rs  engine.rs  error.rs  lib.rs  naming.rs  repl.rs  term.rs  tmux_frontend.rs  tui.rs
libs/eval-tools/: Cargo.toml
libs/eval-tools/src/: lib.rs
libs/mcp/: Cargo.toml  README.md
libs/mcp/docs/: DESIGN.md
libs/mcp/src/: auth.rs  http.rs  lib.rs  types.rs
libs/mcp/tests/: http_integration.rs
libs/model/: Cargo.toml  README.md
libs/model-eval/: Cargo.toml  README.md
libs/model-eval/docs/: API.md  DESIGN.md  PLAN.md
libs/model-eval/fixtures/: medium_context_chat_5k.txt  short_context_chat_1k.txt
libs/model-eval/src/: lib.rs
libs/model/docs/: API.md  DESIGN.md  DESIGN_CHECKPOINT_SEPARATION.md  DESIGN_DISTRIBUTION.md  DESIGN_INCREMENTAL_TTS.md  DESIGN_TOOL_CALLING.md  DESIGN_VOICE_CONTRACTS.md  ORT_ONNX_POLICY.md  PLAN.md  PLAN_TOOL_CALLING.md  PLAN_VOICE_CONTRACTS.md
libs/model/src/: chat.rs  embedding.rs  eval.rs  generation.rs  lib.rs  metrics.rs  metrics_runtime.rs  speech.rs  tool.rs  transcription.rs  typed.rs  units.rs
libs/models/: Cargo.toml  README.md  build.rs
libs/models/docs/: API.md  BUILD_MODELS.md  (+21 more)
libs/tmux/: Cargo.toml
libs/tts/: Cargo.toml  README.md
libs/vfs/: Cargo.toml  build.rs
libs/vmm/: Cargo.toml  build.rs
libs/vnet/: Cargo.toml  README.md  build.rs
libs/voice/: Cargo.toml
libs/xar/: Cargo.toml
(+1406 files in other folders)
