[workspace]
members = [
    "libs/core",
    "libs/db",
    "libs/mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/motlie"
description = "A Rust workspace for multiple libraries and binaries"

[workspace.dependencies]
# Common dependencies that can be shared across workspace members
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
csv = "1.3"
env_logger = "0.10"

# Root package for examples
[package]
name = "motlie"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Motlie workspace with examples"

[dependencies]
motlie-db = { path = "libs/db" }
motlie-mcp = { path = "libs/mcp" }
csv.workspace = true
tokio.workspace = true
anyhow.workspace = true
env_logger.workspace = true
rocksdb = "0.24"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
data-url = "0.3"
lz4 = "1.28"
petgraph = "0.6"
pathfinding = "4.0"
clap = { version = "4.0", features = ["derive"] }
pmcp = { version = "1.8.4", features = ["schema-generation", "validation", "streamable-http"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.16"

[[example]]
name = "store"
path = "examples/store/main.rs"

[[example]]
name = "dfs"
path = "examples/graph/dfs.rs"

[[example]]
name = "bfs"
path = "examples/graph/bfs.rs"

[[example]]
name = "toposort"
path = "examples/graph/toposort.rs"

[[example]]
name = "dijkstra"
path = "examples/graph/dijkstra.rs"

[[example]]
name = "pagerank"
path = "examples/graph/pagerank.rs"

[[example]]
name = "mcp"
path = "examples/mcp/main.rs"
