[workspace]
members = [
    "libs/core",
    "libs/db",
    "libs/mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/motlie"
description = "A Rust workspace for multiple libraries and binaries"

[workspace.dependencies]
# Common dependencies that can be shared across workspace members
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
csv = "1.3"
env_logger = "0.10"

# Root package for examples
[package]
name = "motlie"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Motlie workspace with examples"

[features]
default = []
dtrace-otel = ["motlie-core/dtrace-otel"]

# SIMD dispatch strategy for vector distance computation
# See libs/core/docs/SIMD.md for details
simd-runtime = ["motlie-core/simd-runtime"]
simd-native = ["motlie-core/simd-native"]
simd-avx2 = ["motlie-core/simd-avx2"]
simd-avx512 = ["motlie-core/simd-avx512"]
simd-neon = ["motlie-core/simd-neon"]
simd-none = ["motlie-core/simd-none"]

# Alternative SIMD libraries for benchmarking comparison
simd-pulp = ["pulp"]
simd-simsimd = ["motlie-core/simd-simsimd"]

[dependencies]
motlie-core = { path = "libs/core" }
motlie-db = { path = "libs/db" }
motlie-mcp = { path = "libs/mcp" }
csv.workspace = true
tokio.workspace = true
anyhow.workspace = true
env_logger.workspace = true
rocksdb = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
data-url = "0.3"
lz4 = "1.28"
petgraph = "0.6"
pathfinding = "4.0"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
rmcp = { version = "0.9", features = ["server", "transport-io", "transport-streamable-http-server"] }
pmcp = { version = "1.8.4", features = ["schema-generation", "validation", "streamable-http"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.16"
warp = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.22"
lazy_static = "1.4"

# Optional SIMD libraries for benchmarking
pulp = { version = "0.18", optional = true }
simsimd = { version = "6", optional = true }

[[example]]
name = "store"
path = "examples/store/main.rs"

[[example]]
name = "dfs"
path = "examples/graph/dfs.rs"

[[example]]
name = "bfs"
path = "examples/graph/bfs.rs"

[[example]]
name = "toposort"
path = "examples/graph/toposort.rs"

[[example]]
name = "dijkstra"
path = "examples/graph/dijkstra.rs"

[[example]]
name = "pagerank"
path = "examples/graph/pagerank.rs"

[[example]]
name = "motlie_db"
path = "examples/mcp/motlie_db.rs"

[[example]]
name = "motlie_tts"
path = "examples/mcp/motlie_tts.rs"

[[example]]
name = "motlie_all"
path = "examples/mcp/all.rs"

[[example]]
name = "bfs_original"
path = "examples/graph/bfs_original.rs"

[[example]]
name = "pagerank_original"
path = "examples/graph/pagerank_original.rs"

[[example]]
name = "a_star"
path = "examples/graph/a_star.rs"

[[example]]
name = "louvain"
path = "examples/graph/louvain.rs"

[[example]]
name = "iam_permissions"
path = "examples/iam/iam_permissions.rs"

[[example]]
name = "tracing_durability"
path = "examples/tracing/tracing_durability.rs"

[[example]]
name = "verify_traces"
path = "examples/tracing/verify_traces.rs"

[[example]]
name = "hnsw"
path = "examples/vector/hnsw.rs"

[[example]]
name = "vamana"
path = "examples/vector/vamana.rs"

[[example]]
name = "simd_bench"
path = "examples/vector/simd_bench.rs"

[[example]]
name = "vector2"
path = "examples/vector2/main.rs"

[[bin]]
name = "motlie"
path = "bins/motlie/src/main.rs"

[[test]]
name = "fulltext_cli"
path = "bins/motlie/tests/fulltext_cli.rs"

[[test]]
name = "db_cli"
path = "bins/motlie/tests/db_cli.rs"

[dev-dependencies]
tempfile = "3.14"
