[package]
name = "mbuild"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Top-level Motlie v1.5 image builder"

[dependencies]
motlie-vmm = { path = "../../libs/vmm" }
serde.workspace = true
serde_json = "1.0.149"
serde_yaml = "0.9"
