[package]
name = "mbuild"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Top-level Motlie v1.5 image builder"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.58", features = ["derive"] }
motlie-vmm = { path = "../../libs/vmm" }
serde.workspace = true
serde_json = "1.0.149"
serde_yaml = "0.9"
sha2 = "0.10"
