[package]
name = "motlie-mmux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI tmux session selector"

# macOS host installs for this binary must re-sign the installed path before
# ForceCommand use. See docs/CLI.md#local-build-and-macos-install.
[[bin]]
name = "mmux"
path = "main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
futures = "0.3"
motlie-tmux = { path = "../../libs/tmux" }
clap = { version = "4.5.58", features = ["derive"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
chrono = "0.4"
ansi-to-tui = "8"
tracing = "0.1"
unicode-width = "0.2"
