[package]
name = "motlie-telnyx-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference Motlie Telnyx text-call agent daemon"

[[bin]]
name = "telnyx-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5.58", features = ["derive"] }
futures-util = "0.3"
motlie-telnyx-gateway = { path = "../telnyx-gateway" }
motlie-tmux = { path = "../../libs/tmux" }
reqwest = { version = "0.13.2", features = ["json"] }
serde.workspace = true
serde_json = "1.0.149"
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
