[package]
name = "motlie-telnyx-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator-driven Telnyx voice gateway for Motlie"

[lib]
path = "src/lib.rs"

[[bin]]
name = "telnyx-gateway"
path = "src/main.rs"

[features]
default = []
sherpa = [
    "dep:motlie-model-sherpa-onnx",
    "motlie-models/model-sherpa-onnx-streaming",
]

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.29"
futures-util = "0.3"
hound = "3.5"
motlie-driver = { path = "../../libs/driver" }
motlie-model = { path = "../../libs/model" }
motlie-model-sherpa-onnx = { path = "../../libs/model/backends/sherpa_onnx", optional = true }
motlie-models = { path = "../../libs/models", default-features = false }
motlie-voice = { path = "../../libs/voice" }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde.workspace = true
serde_json = "1.0.149"
shlex = "1.3"
thiserror.workspace = true
tokio.workspace = true
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = "0.5"
