[package]
name = "voice-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed voice-agent orchestration for Motlie speech examples"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.58", features = ["derive"] }
