[package]
name = "motlie-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent interaction policy over motlie-tmux"

[features]
default = ["channel"]
channel = ["dep:motlie-tmux", "dep:tokio", "dep:thiserror", "dep:tracing"]

[dependencies]
motlie-tmux = { path = "../tmux", optional = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true, optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1.0.149"
tokio = { workspace = true, features = ["full", "test-util"] }
