[package]
name = "motlie-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4"

# Optional OpenTelemetry dependencies for distributed tracing
tracing-opentelemetry = { version = "0.28", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }

# Optional SIMD libraries for benchmarking comparison
simsimd = { version = "6", optional = true }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4.5.58", features = ["derive"] }

[features]
default = []
dtrace-otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk"]

# SIMD dispatch strategy for vector distance computation
# See docs/SIMD.md for details
simd-runtime = []           # Runtime CPU detection (portable binaries)
simd-native = []            # Hint that -C target-cpu=native is used
simd-avx2 = []              # x86_64 AVX2+FMA (most x86 servers)
simd-avx512 = []            # x86_64 AVX-512 (DGX Spark, newer Intel/AMD)
simd-neon = []              # ARM64 NEON (macOS Apple Silicon, Linux ARM)
simd-none = []              # Scalar fallback only (for debugging/testing)
simd-simsimd = ["simsimd"]  # SimSIMD C library bindings for comparison

[[bench]]
name = "distance"
harness = false
