[package]
name = "motlie-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database library for motlie"

[features]
default = []
# Parquet format support for Cohere Wikipedia and other HuggingFace datasets
parquet = ["dep:parquet", "dep:arrow"]
# HDF5 format support for ann-benchmarks datasets (GloVe, etc.)
hdf5 = ["dep:hdf5"]
# All benchmark dataset formats
benchmark-all = ["parquet", "hdf5"]

[dependencies]
motlie-core = { path = "../core" }
ferroid = { version = "0.8", features = ["ulid", "std", "base32"] }
anyhow.workspace = true
tokio.workspace = true
tracing = "0.1"
async-trait = "0.1"
rocksdb = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
data-url = "0.3"
base64 = "0.22"
flume = "0.11"
lz4 = "1.28"
tantivy = "0.22"
# Name interning (Phase 1 optimization)
xxhash-rust = { version = "0.8", features = ["xxh64"] }
dashmap = "6"
# Zero-copy serialization for hot CFs (Phase 3)
rkyv = { version = "0.7", features = ["validation", "strict"] }
bytecheck = { version = "0.6" }
# RoaringBitmap for HNSW edges and ID allocator free lists
roaring = "0.10"
# HNSW algorithm dependencies
ordered-float = "4"
rand = "0.8"
rand_chacha = "0.3"
# Half-precision float support for VectorStorageType::F16
half = "2.4"
# Byte order reading for NPY format in benchmark module
byteorder = "1.5"
# Parallel reranking for search (Task 4.19)
rayon = "1.10"
# Temp directories for benchmark runner
tempfile = "3.14"
# Optional: Parquet/Arrow for Cohere Wikipedia and HuggingFace datasets
parquet = { version = "54", optional = true, default-features = false, features = ["arrow"] }
arrow = { version = "54", optional = true, default-features = false, features = ["ffi"] }
# Optional: HDF5 for ann-benchmarks datasets (GloVe, NYTimes, etc.)
hdf5 = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
# Re-export for benchmarks (already in main deps but needed for extern crate)
lz4 = "1.28"
rmp-serde = "1.3"
rand = "0.8"

[[bench]]
name = "db_operations"
harness = false
