[package]
name = "motlie-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command driver runtime, frontends, and adapter scaffolding for Motlie"

[lib]
path = "src/lib.rs"

[features]
default = []
repl = ["dep:reedline"]
tui = ["dep:ratatui", "dep:crossterm"]
term-vt100 = ["dep:vt100"]
term-shadow = []
commands-vmm = []
commands-vnet = []
commands-vfs = []
commands-tmux = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap = { version = "4.5.58", features = ["derive"] }
async-trait = "0.1"
shlex = "1.3"
reedline = { version = "0.38", optional = true }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.29", optional = true }
vt100 = { version = "0.15", optional = true }
