[package]
name = "motlie-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command driver runtime, frontends, and adapter scaffolding for Motlie"

[lib]
path = "src/lib.rs"

[features]
default = []
repl = ["dep:reedline"]
tui = ["dep:ratatui", "dep:crossterm", "dep:ansi-to-tui"]
term-vt100 = ["dep:vt100"]
term-shadow = []
commands-vmm = []
commands-vnet = []
commands-vfs = []
commands-tmux = ["dep:motlie-tmux", "dep:regex"]

[dependencies]
thiserror.workspace = true
clap = { version = "4.5.58", features = ["derive"] }
async-trait = "0.1"
serde.workspace = true
serde_json = "1.0.149"
shlex = "1.3"
tokio.workspace = true
reedline = { version = "0.38", optional = true }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.29", optional = true }
vt100 = { version = "0.15", optional = true }
regex = { version = "1.12", optional = true }
motlie-tmux = { path = "../tmux", optional = true }
ansi-to-tui = { version = "8", optional = true }

[dev-dependencies]

[[example]]
name = "tmux_repl"
path = "examples/tmux_repl.rs"
required-features = ["repl", "commands-tmux"]

[[example]]
name = "tmux_tui"
path = "examples/tmux_tui.rs"
required-features = ["tui", "commands-tmux"]
