[package]
name = "motlie-eval-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Executable local tools and transcript assertions for Motlie model evals"

[dependencies]
motlie-model = { path = "../model" }
serde.workspace = true
serde_json = "1.0.149"
thiserror.workspace = true
