[package]
name = "motlie-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server library for motlie graph database"

[dependencies]
motlie-db = { path = "../db" }
pmcp = { version = "1.8.4", features = ["schema-generation", "validation"] }
schemars = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
log = "0.4"
tracing = "0.1"

[dev-dependencies]
env_logger = "0.10"
tempfile = "3.0"
tokio-test = "0.4"
