[package]
name = "motlie-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server library for motlie graph database"

[dependencies]
motlie-db = { path = "../db" }
rmcp = { version = "0.9", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = { version = "1", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.149"
anyhow = { workspace = true }
log = "0.4"
tracing = "0.1"
async-trait = "0.1"

# HTTP transport dependencies
axum = "0.8"
tower = "0.5"

[dev-dependencies]
env_logger = "0.10"
tempfile = "3.25.0"
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber = "0.3"
