[package]
name = "motlie-model-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Evaluation harness tooling for Motlie model bundles"

[lib]
path = "src/lib.rs"

[dependencies]
motlie-model = { path = "../model" }
