[package]
name = "motlie-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core contracts for curated Motlie model bundles"

[lib]
path = "src/lib.rs"

[features]
default = []
metrics-runtime = ["dep:sysinfo", "dep:tracing"]

[dependencies]
async-trait = "0.1.89"
sysinfo = { version = "0.36.1", optional = true }
thiserror.workspace = true
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio.workspace = true
